# chess-analysis

./: README.md  bun.lockb  output.sql  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  opening.rs
